# hailo-drone-follow

./: .gitignore  CLAUDE.md  README.md  SETUP_GUIDE.md  df_params.json  install.sh  pyproject.toml  run_drone.sh  setup_env.sh
configs/: outdoor_follow.json  outdoor_orbit.json  outdoor_yaw_only.json  simulation.json  simulation_follow.json
drone_follow/: __init__.py  drone_follow_app.py
drone_follow/drone_api/: __init__.py  mavsdk_drone.py
drone_follow/follow_api/: __init__.py  config.py  controller.py  state.py
drone_follow/pipeline_adapter/: __init__.py  byte_tracker.py  fast_tracker.py  hailo_drone_detection_manager.py  tracker.py  tracker_factory.py
drone_follow/sdf_examples/: 2_person_world.sdf  2_persons_diagonal.sdf  random_walk.sdf
drone_follow/servers/: __init__.py  follow_server.py  openhd_bridge.py  video_recorder.py  web_server.py
drone_follow/sim/: __init__.py  world_loader.py
drone_follow/tests/: test_controller.py  test_follow_target_state.py  test_tracker.py  test_velocity_api_and_smoother.py
drone_follow/tools/: mot_eval.py  video_bridge.py
drone_follow/ui/src/: App.css  App.jsx
sim/: setup_sim.sh  start_sim.sh
sim/bridge/: video_bridge.py
sim/patches/: x500_vision_camera.patch
